[project]
name = "sunset-tracker"
version = "0.1.0"
description = "CLI tool to show sunrise, sunset, golden hour, and blue hour"
readme = "README.md"
authors = [{name = "Gdev45"}]   # No email
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "colorama",
    "timezonefinder",
    "click"
]

[project.scripts]
sunset-tracker = "sunset_tracker.main:main"
